GE-236 fix add crop bugs